--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+flask==2.2.1
+flask_cors==3.0.10
 torch==2.0.1
 biopython==1.81
 transformers==4.28.1
 tokenizers==0.13.3
 pandas==1.5.2
-scikit-learn
+scikit-learn==1.4.1.post1
 matplotlib==3.7.1
 matplotlib-inline==0.1.6
