--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,15 @@ version: "3"
 
 services:
   amp-regression-predict-flask:
-    build: .
+    build:
+      context: .
     ports:
       - 8889:8888
     volumes:
-      - .:/AMP_Regression_EC_SA_Predict
+      - .:/app
     restart: always
-    # command: python app.py
-    command: flask run --host=0.0.0.0 --port=8888 --reload --debugger
-    # command: gunicorn app:app --workers 2 --bind 0.0.0.0:8888 --timeout 300
+    # command: flask run --host=0.0.0.0 --port=8888 --reload --debugger
+    command: gunicorn app:app --workers 1 --bind 0.0.0.0:8888 --timeout 1800
     networks:
       - amp-regression-predict-flask
     # env_file: .env
